--- a/index.html
+++ b/index.html
@@ -10,5 +10,36 @@
 </head>
 <body>
    
+   <header class="container-fluid">
+      <div class="container">
+
+         <div class="row">
+
+            <div class="col-9 col-md-4 d-flex justify-content-start align-items-center">
+               <span class="text-uppercase fw-bold">start bootstrap</span>
+            </div>
+            
+            <div class="col-3 col-md-8 d-flex justify-content-end align-items-center">
+               <ul class="d-none d-md-flex text-uppercase">
+                  <li class="ps-3 ">
+                     <a href="#" class="text-uppercase">portfolio</a>
+                  </li>
+                  <li class="ps-3">
+                     <a href="#" class="text-uppercase">portfolio</a>
+                  </li>
+                  <li class="ps-3">
+                     <a href="#" class="text-uppercase">portfolio</a>
+                  </li>
+               </ul>
+               <div class="d-md-none">
+                  <span>ICON</span>
+               </div>
+            </div>
+
+         </div>
+
+      </div>
+   </header>
+
 </body>
 </html>
