--- a/index.html
+++ b/index.html
@@ -39,7 +39,18 @@
          </div>
 
       </div>
+
    </header>
+
+   <section class="jumbotron container-fluid">
+      <div class="container">
+
+         <div class="row">
+            <div class="content_jumbo col col-md-8 offset-md-2"></div>
+         </div>
+
+      </div>
+   </section>
 
 </body>
 </html>
