--- a/index.html
+++ b/index.html
@@ -52,5 +52,39 @@
       </div>
    </section>
 
+   <main>
+
+      <section class="portfolio container text-black">
+
+         <div class="row">
+            <div class="col-12 text-center">
+               <h2 class="text-uppercase">
+                  portfolio
+               </h2>
+            </div>
+            <div class="col-12 text-center">
+               <h2 class="text-uppercase">
+                  --------
+               </h2>
+            </div>
+         </div>
+
+         <div class="row justify-content-center">
+            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
+            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
+            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
+            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
+            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
+            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
+         </div>
+
+      </section>
+
+      <section class="about"></section>
+
+      <section class="contact_me"></section>
+
+   </main>
+
 </body>
 </html>
