--- a/index.html
+++ b/index.html
@@ -80,7 +80,31 @@
 
       </section>
 
-      <section class="about"></section>
+      <section class="about">
+         <div class="container">
+
+            <div class="row">
+               <div class="col-12 text-center">
+                  <h2 class="text-uppercase">about
+                  </h2>
+               </div>
+               <div class="col-12 text-center">
+                  <h2 class="text-uppercase">
+                     --------
+                  </h2>
+               </div>
+            </div>
+            <div class="row">
+               <div class="col-12 col-md-6">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolores autem eligendi officia ex excepturi unde ipsum dolor expedita sunt?</p>
+               </div>
+               <div class="col-12 col-md-6">
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, ex. Quis, natus. Porro explicabo possimus veritatis, hic provident illum et?</p>
+               </div>
+            </div>
+
+         </div>
+      </section>
 
       <section class="contact_me"></section>
 
