--- a/index.html
+++ b/index.html
@@ -106,9 +106,59 @@
          </div>
       </section>
 
-      <section class="contact_me"></section>
+      <section class="contact_me container text-black">
+      
+         <div class="col-12 text-center">
+            <h2 class="text-uppercase">
+               contact me
+            </h2>
+         </div>
+         <div class="col-12 text-center">
+            <h2 class="text-uppercase">
+               --------
+            </h2>
+         </div>
+         <div class="row">
+            <div class="label col-12">nome</div>
+            <div class="label col-12">nome</div>
+            <div class="label col-12">nome</div>
+            <div class="label col-12">nome</div>
+            <div class="label col-12">nome</div>
+         </div>
+         <button>SEND</button>
+      </section>
 
    </main>
+
+   <footer>
+      
+      <div class="footer_top">
+         <div class="container">
+
+            <div class="row text-center">
+               <div class="col-12 col-md-4">
+                  location
+               </div>
+               <div class="col-12 col-md-4">
+                  around
+               </div>
+               <div class="col-12 col-md-4">
+                  about
+               </div>
+            </div>
+
+         </div>
+      </div>
+
+      <div class="footer_bottom">
+         <div class="row text-center">
+            <div class="col">
+               copyright
+            </div>
+         </div>
+      </div>
+
+   </footer>
 
 </body>
 </html>
