--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    
-   <header class="container-fluid">
+   <header class="d-block">
       <div class="container">
 
          <div class="row">
@@ -42,7 +42,7 @@
 
    </header>
 
-   <section class="jumbotron container-fluid">
+   <section class="jumbotron bg_green py_50">
       <div class="container">
 
          <div class="row">
@@ -54,7 +54,7 @@
 
    <main>
 
-      <section class="portfolio container text-black">
+      <section class="portfolio py_50 container text-black">
 
          <div class="row">
             <div class="col-12 text-center">
@@ -69,19 +69,31 @@
             </div>
          </div>
 
-         <div class="row justify-content-center">
-            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
-            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
-            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
-            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
-            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
-            <div class="portfolio_img col-12 col-md-5 col-lg-3 m-3"></div>
+         <div class="row">
+            <div class="col-md-6 col-lg-4">
+               <div class="portfolio_img"></div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+               <div class="portfolio_img"></div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+               <div class="portfolio_img"></div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+               <div class="portfolio_img"></div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+               <div class="portfolio_img"></div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+               <div class="portfolio_img"></div>
+            </div>
          </div>
 
       </section>
 
-      <section class="about">
-         <div class="container">
+      <section class="about container_60 py_50 bg_green">
+         <div class="container-fluid">
 
             <div class="row">
                <div class="col-12 text-center">
@@ -95,10 +107,10 @@
                </div>
             </div>
             <div class="row">
-               <div class="col-12 col-md-6">
+               <div class="col-md-6">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolores autem eligendi officia ex excepturi unde ipsum dolor expedita sunt?</p>
                </div>
-               <div class="col-12 col-md-6">
+               <div class="col-md-6">
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, ex. Quis, natus. Porro explicabo possimus veritatis, hic provident illum et?</p>
                </div>
             </div>
@@ -106,7 +118,7 @@
          </div>
       </section>
 
-      <section class="contact_me container text-black">
+      <section class="contact_me py_50 container text-black">
       
          <div class="col-12 text-center">
             <h2 class="text-uppercase">
@@ -132,7 +144,7 @@
 
    <footer>
       
-      <div class="footer_top">
+      <div class="footer_top py_50">
          <div class="container">
 
             <div class="row text-center">
@@ -150,7 +162,7 @@
          </div>
       </div>
 
-      <div class="footer_bottom">
+      <div class="footer_bottom py_50">
          <div class="row text-center">
             <div class="col">
                copyright
