--- a/index.html
+++ b/index.html
@@ -111,30 +111,35 @@
             
       </section>
 
-      <section class="about container_60 py_50 bg_green">
-         <div class="container-fluid">
+      <section class="about d-block py_50 bg_green">
 
-            <div class="row">
-               <div class="col-12 text-center">
-                  <h2 class="text-uppercase">about
-                  </h2>
-               </div>
-               <div class="col-12 text-center">
-                  <h2 class="text-uppercase">
-                     --------
-                  </h2>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-6">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolores autem eligendi officia ex excepturi unde ipsum dolor expedita sunt?</p>
-               </div>
-               <div class="col-md-6">
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, ex. Quis, natus. Porro explicabo possimus veritatis, hic provident illum et?</p>
-               </div>
-            </div>
-
+         <!-- titolo -->
+         <div class="text-center">
+            <h2 class="text-uppercase">
+               about
+            </h2>
+            <div class="py-1">linea satanica<div>
          </div>
+
+         <div class="container_70">
+            <div class="row">
+               <div class="col-md-6 py-3">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus, velit nesciunt earum necessitatibus repellat aperiam error accusamus consectetur mollitia doloribus animi quasi illo itaque asperiores, aliquid sapiente adipisci id, consequuntur ducimus. Ex rerum modi ea itaque molestias sequi obcaecati.</p>
+               </div>
+               <div class="col-md-6 py-3">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus, velit nesciunt earum necessitatibus repellat aperiam error accusamus consectetur mollitia doloribus animi quasi illo itaque asperiores, aliquid sapiente adipisci id, consequuntur ducimus. Ex rerum modi ea itaque molestias sequi obcaecati.</p>
+               </div>
+            </div>
+         </div>
+
+            <!-- pulsante -->
+            <div class="text-center">
+               <a href="#" class="btn btn_custom">
+                  <i class="fas fa-download"></i>
+                  Download
+               </a>
+            </div>
+
       </section>
 
       <section class="contact_me py_50 container_60 text-black">
