--- a/index.html
+++ b/index.html
@@ -182,14 +182,34 @@
          <div class="container">
 
             <div class="row text-center">
+               <!-- location  -->
                <div class="col-12 col-md-4">
-                  location
+                  <h4 class="text-uppercase">
+                     location
+                  </h4>
+                  <div>
+                     2215 Jhon Daniel Drive Clark, MO
+                  </div>
+                  <div>52352</div>
                </div>
+               <!-- Around the web - center  -->
                <div class="col-12 col-md-4">
-                  around
+                  <h4 class="text-uppercase">
+                     around the web
+                  </h4>
+                  <div>
+                     
+                  </div>
                </div>
+               <!-- location  -->
                <div class="col-12 col-md-4">
-                  about
+                  <h4 class="text-uppercase">
+                     location
+                  </h4>
+                  <div>
+                     2215 Jhon Daniel Drive Clark, MO
+                  </div>
+                  <div>52352</div>
                </div>
             </div>
 
