--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
          <div class="container">
 
             <div class="row text-center">
+
                <!-- location  -->
                <div class="col-12 col-md-4">
                   <h4 class="text-uppercase">
@@ -192,16 +193,30 @@
                   </div>
                   <div>52352</div>
                </div>
+
                <!-- Around the web - center  -->
                <div class="col-12 col-md-4">
                   <h4 class="text-uppercase">
                      around the web
                   </h4>
-                  <div>
-                     
+                  <!-- icon social -->
+                  <div class="icons d-flex justify-content-center flex-nowrap">
+                     <div class="icon_social">
+                        <i class="fab fa-facebook-f"></i>
+                     </div>
+                     <div class="icon_social">
+                        <i class="fab fa-google-plus-g"></i>
+                     </div>
+                     <div class="icon_social">
+                        <i class="fab fa-twitter"></i>
+                     </div>
+                     <div class="icon_social">
+                        <i class="fab fa-linkedin-in"></i>
+                     </div>
                   </div>
+                     
                </div>
-               <!-- location  -->
+               <!-- About freelencer -->
                <div class="col-12 col-md-4">
                   <h4 class="text-uppercase">
                      location
@@ -211,6 +226,7 @@
                   </div>
                   <div>52352</div>
                </div>
+
             </div>
 
          </div>
