--- a/index.html
+++ b/index.html
@@ -184,18 +184,17 @@
             <div class="row text-center">
 
                <!-- location  -->
-               <div class="col-12 col-md-4">
+               <div class="col-12 col-md-4 py-3 py-md-0">
                   <h4 class="text-uppercase">
                      location
                   </h4>
                   <div>
-                     2215 Jhon Daniel Drive Clark, MO
+                     2215 Jhon Daniel Drive Clark, MO 54325
                   </div>
-                  <div>52352</div>
                </div>
 
                <!-- Around the web - center  -->
-               <div class="col-12 col-md-4">
+               <div class="col-12 col-md-4 py-3 py-md-0">
                   <h4 class="text-uppercase">
                      around the web
                   </h4>
@@ -217,14 +216,13 @@
                      
                </div>
                <!-- About freelencer -->
-               <div class="col-12 col-md-4">
+               <div class="col-12 col-md-4 py-3 py-md-0">
                   <h4 class="text-uppercase">
-                     location
+                     about freelencer
                   </h4>
                   <div>
-                     2215 Jhon Daniel Drive Clark, MO
+                     Freelance is a free to use, open source Bootstrap theme created by <a href="#" class="color_green">Start Bootstrap</a>.
                   </div>
-                  <div>52352</div>
                </div>
 
             </div>
@@ -233,10 +231,10 @@
       </div>
 
       <div class="footer_bottom py_50">
-         <div class="row text-center">
-            <div class="col">
-               copyright
-            </div>
+         <div class="text-center">
+            Copyright
+            <i class="far fa-copyright"></i>
+            Your Website by Luigi Verde 2021
          </div>
       </div>
 
