bonus completato, aggiunto padding responsive (about & footer) - Hover img in progress

--- a/index.html
+++ b/index.html
@@ -46,18 +46,21 @@
    </header>
 
    <section class="_jumbotron bg_green py_50">
-      <div class="container">
 
-         <div class="content_jumbo  d-flex flex-column align-items-center">
-            <img src="img/avatar.svg" alt="avatar" class="_avatar">
-            <h1 class="text-uppercase py-1">start bootstrap</h1>
-            <div>liea satanica</div>
-            <span class="text-uppercase py-1">
-               graphic artist - web designer - illustrator
-            </span>
+      <div class="content_jumbo d-flex flex-column align-items-center">
+         <img src="img/avatar.svg" alt="avatar" class="_avatar">
+         <h1 class="text-uppercase py-1">start bootstrap</h1>
+         <!-- star separatrice -->
+         <div class="star_separator d-flex justify-content-evenly align-items-center">
+            <div class="line_star rounded-pill"></div>
+            <i class="fas fa-star"></i>
+            <div class="line_star rounded-pill"></div>
          </div>
-
+         <span class="text-uppercase py-1">
+            graphic artist - web designer - illustrator
+         </span>
       </div>
+
    </section>
 
    <main>
@@ -69,7 +72,12 @@
             <h2 class="text-uppercase">
                portfolio
             </h2>
-            <div class="py-1">linea satanica</div>
+            <!-- star separatrice -->
+            <div class="star_separator d-flex justify-content-evenly align-items-center">
+            <div class="line_star bg-dark rounded-pill"></div>
+            <i class="fas fa-star"></i>
+            <div class="line_star bg-dark rounded-pill"></div>
+            </div>
          </div>
 
          <!-- immagini responsive -->
@@ -118,16 +126,21 @@
             <h2 class="text-uppercase">
                about
             </h2>
-            <div class="py-1">linea satanica<div>
+            <!-- star separatrice -->
+            <div class="star_separator d-flex justify-content-evenly align-items-center">
+               <div class="line_star rounded-pill"></div>
+               <i class="fas fa-star"></i>
+               <div class="line_star rounded-pill"></div>
+               </div>
          </div>
 
          <!-- paragrafi  -->
          <div class="container_70">
             <div class="row">
-               <div class="col-md-6 py-3">
+               <div class="col-md-6 py-3 py-md-0">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus, velit nesciunt earum necessitatibus repellat aperiam error accusamus consectetur mollitia doloribus animi quasi illo itaque asperiores, aliquid sapiente adipisci id, consequuntur ducimus. Ex rerum modi ea itaque molestias sequi obcaecati.</p>
                </div>
-               <div class="col-md-6 py-3">
+               <div class="col-md-6 py-3 py-md-0">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus, velit nesciunt earum necessitatibus repellat aperiam error accusamus consectetur mollitia doloribus animi quasi illo itaque asperiores, aliquid sapiente adipisci id, consequuntur ducimus. Ex rerum modi ea itaque molestias sequi obcaecati.</p>
                </div>
             </div>
@@ -150,7 +163,12 @@
             <h2 class="text-uppercase">
                portfolio
             </h2>
-            <div class="py-1">linea satanica</div>
+            <!-- star separatrice -->
+            <div class="star_separator d-flex justify-content-evenly align-items-center">
+               <div class="line_star bg-dark rounded-pill"></div>
+               <i class="fas fa-star"></i>
+               <div class="line_star bg-dark rounded-pill"></div>
+               </div>
          </div>
          
          <!-- form  -->
