--- a/index.html
+++ b/index.html
@@ -84,33 +84,45 @@
          <div class="container">
             <div class="row">
                <div class="col-md-6 col-lg-4">
-                  <div class="portfolio_img">
-                     <img src="img/cabin.png" alt="">
+                  <div class="portfolio_img position-relative">
+                     <img src="img/cabin.png" alt="" class="d-block">
+                     <div class="layover_green"></div>
+                     <i class="fas fa-plus position-absolute"></i>
                   </div>
                </div>
                <div class="col-md-6 col-lg-4">
-                  <div class="portfolio_img">
-                     <img src="img/cake.png" alt="">
+                  <div class="portfolio_img position-relative">
+                     <img src="img/cake.png" alt="" class="d-block">
+                     <div class="layover_green"></div>
+                     <i class="fas fa-plus position-absolute"></i>
                   </div>
                </div>
                <div class="col-md-6 col-lg-4">
-                  <div class="portfolio_img">
-                     <img src="img/circus.png" alt="">
+                  <div class="portfolio_img position-relative">
+                     <img src="img/circus.png" alt="" class="d-block">
+                     <div class="layover_green"></div>
+                     <i class="fas fa-plus position-absolute"></i>
                   </div>
                </div>
                <div class="col-md-6 col-lg-4">
-                  <div class="portfolio_img">
-                     <img src="img/game.png" alt="">
+                  <div class="portfolio_img position-relative">
+                     <img src="img/game.png" alt="" class="d-block">
+                     <div class="layover_green"></div>
+                     <i class="fas fa-plus position-absolute"></i>
                   </div>
                </div>
                <div class="col-md-6 col-lg-4">
-                  <div class="portfolio_img">
-                     <img src="img/safe.png" alt="">
+                  <div class="portfolio_img position-relative">
+                     <img src="img/safe.png" alt="" class="d-block">
+                     <div class="layover_green"></div>
+                     <i class="fas fa-plus position-absolute"></i>
                   </div>
                </div>
                <div class="col-md-6 col-lg-4">
-                  <div class="portfolio_img">
-                     <img src="img/submarine.png" alt="">
+                  <div class="portfolio_img position-relative">
+                     <img src="img/submarine.png" alt="" class="d-block">
+                     <div class="layover_green"></div>
+                     <i class="fas fa-plus position-absolute"></i>
                   </div>
                </div>
                
